Fix SVG-As-Background sizing

Addresses a TODO where we were snapping the intrinsic size of an SVG image,
even when that is no longer useful. This was posing issues with operations
using aspect ratio, because the computed aspect ratio on the snapped value
was wrong when then used on un-snapped values.

R=fs@opera.com
BUG=855882

Change-Id: I0c14c0109da4c5ca5e52aebf408e9b702eda799c
Reviewed-on: https://chromium-review.googlesource.com/c/1370486
Commit-Queue: Stephen Chenney <schenney@chromium.org>
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/heads/master@{#615798}
Former-commit-id: aed99d7e12bd036ab3ebb4fe522ce8faf347a32f